--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>劉宇秦大學要做的8件事</title>
-<meta charset="utf-8"></meta>
+<title>劉宇秦自我介紹網頁</title>
+<meta charset="utf-8">
 </head>
 <body>
-<h1>劉宇秦大學要做的8件事</h1>
-<div>
-一、將自己專業學好<p>
-二、至少修一個雙主修、輔系、或學分學程<p>
-三、至少出國一次去交換、雙連、實習、研習、參加研討會或競賽<p>
-四、多閱讀、能思辨、善表達<p>
-五、學好英文、外加第二外語<p>
-六、學好運算思維與程式設計能力<p>
-七、養成運動習慣、藝術鑑賞能力<p>
-八、知道如何就業與創業<p>
-</div>
+<h1>劉宇秦自我介紹網頁</h1>
+<div>劉宇秦自我介紹網頁</div>
+我是劉宇秦，個性開朗直率、認真負責、執行力強，<br>
+有些興趣似乎是與生俱來的，天生就很喜歡畫畫，在我幼稚園的時候，就喜歡拿著畫筆塗鴉。<br>
+上小學之後，母親似乎發現了我的興趣，於是就送我去學畫畫。剛開始雖然對繪畫不太熟悉，但很快就全心投入。<br>
+<img src="3083214.jpg">
 </body>
 </html>
+			
